unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__AverageSpeed_kph__c.field-meta.xml
<CustomField>
    <fullName>maps__AverageSpeed_kph__c</fullName>
    <inlineHelpText>Vitesse moyenne pendant l&#39;événement, en kilomètres par heure</inlineHelpText>
    <label>Average Speed (kph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>