unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__City__c.field-meta.xml
<CustomField>
    <fullName>maps__City__c</fullName>
    <description>Maps Live City address field</description>
    <inlineHelpText>Ville du lieu de l&#39;événement (quand disponible)</inlineHelpText>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>