unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__EventEnded__c.field-meta.xml
<CustomField>
    <fullName>maps__EventEnded__c</fullName>
    <inlineHelpText>Horodatage de la fin de l&#39;événement</inlineHelpText>
    <label>Event Ended</label>
    <type>DateTime</type>
</CustomField>