unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__EventOccuredAMorPM__c.field-meta.xml
<CustomField>
    <fullName>maps__EventOccuredAMorPM__c</fullName>
    <description>AM/PM is determined based on the Timezone of the device.</description>
    <inlineHelpText>Matin/après-midi est déterminé en fonction du fuseau horaire de l&#39;appareil.</inlineHelpText>
    <label>Event Occurred in AM or PM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
            <value>
                <fullName>AM/PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>