unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__EventStarted__c.field-meta.xml
<CustomField>
    <fullName>maps__EventStarted__c</fullName>
    <inlineHelpText>Horodatage du début de l&#39;événement</inlineHelpText>
    <label>Event Started</label>
    <type>DateTime</type>
</CustomField>