unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__Full_Address__c.field-meta.xml
<CustomField>
    <fullName>maps__Full_Address__c</fullName>
    <inlineHelpText>Adresse complète du lieu de l&#39;événement</inlineHelpText>
    <label>Full Address</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>