unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__LiveAssetDailySummary__c.field-meta.xml
<CustomField>
    <fullName>maps__LiveAssetDailySummary__c</fullName>
    <description>Live Asset Daily Summary record to which this event relates</description>
    <inlineHelpText>Enregistrement Résumé quotidien d&#39;actif live auquel cet événement est associé</inlineHelpText>
    <label>Live Asset Daily Summary</label>
    <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
    <relationshipLabel>Live Asset Daily Summary Events</relationshipLabel>
    <relationshipName>LiveAssetDailySummaryEvents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>