unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__OdometerKm__c.field-meta.xml
<CustomField>
    <fullName>maps__OdometerKm__c</fullName>
    <inlineHelpText>Valeur de l&#39;odomètre (km) capturée lors de l&#39;événement</inlineHelpText>
    <label>Odometer (km)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>