unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__Position__c.field-meta.xml
<CustomField>
    <fullName>maps__Position__c</fullName>
    <inlineHelpText>Emplacement de l&#39;actif au début de l&#39;événement</inlineHelpText>
    <label>Position</label>
    <scale>7</scale>
    <type>Location</type>
</CustomField>