unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__PostalCode__c</fullName>
    <description>Maps Live Postal Code address field</description>
    <inlineHelpText>Code postal du lieu de l&#39;événement (quand disponible)</inlineHelpText>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>