unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__PostedSpeedLimit_KPH__c.field-meta.xml
<CustomField>
    <fullName>maps__PostedSpeedLimit_KPH__c</fullName>
    <inlineHelpText>Vitesse limitée publiée pour le lieu de l&#39;événement, si disponible, en kilomètres par heure</inlineHelpText>
    <label>Posted Speed Limit (kph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>