unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__PostedSpeedLimit_MPH__c.field-meta.xml
<CustomField>
    <fullName>maps__PostedSpeedLimit_MPH__c</fullName>
    <description>This is the posted speed limit of where the event took place.</description>
    <formula>ROUND(maps__PostedSpeedLimit_KPH__c * 0.62137, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Vitesse limitée publiée pour le lieu de l&#39;événement, si disponible, en miles par heure</inlineHelpText>
    <label>Posted Speed Limit (mph)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>