unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__Street_Address__c.field-meta.xml
<CustomField>
    <fullName>maps__Street_Address__c</fullName>
    <description>Maps Live Street Address field</description>
    <inlineHelpText>Adresse du lieu de l&#39;événement (quand disponible)</inlineHelpText>
    <label>Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>