unpackaged/main/default/objects/maps__LiveAssetDailySummaryEvent__c/fields/maps__TotalEventTimeHours__c.field-meta.xml
<CustomField>
    <fullName>maps__TotalEventTimeHours__c</fullName>
    <inlineHelpText>Durée d&#39;un événement d&#39;arrêt en heures (disponible uniquement pour les événements Arrêt)</inlineHelpText>
    <label>Event Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>